--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="libs/jung-api-2.0.jar"/>
 	<classpathentry kind="lib" path="libs/jung-graph-impl-2.0.jar"/>
 	<classpathentry kind="lib" path="libs/collections-generic-4.01.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Java-WebSocket"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
