some project-specific modifications (eclipse/mvn)

--- a/sgs-server/pom.xml
+++ b/sgs-server/pom.xml
@@ -64,6 +64,12 @@
       <groupId>org.reddwarfserver.tools.test</groupId>
       <artifactId>sgs-test-ext</artifactId>
     </dependency>
+	<dependency>
+	    <groupId>org.java-websocket</groupId>
+	    <artifactId>Java-WebSocket</artifactId>
+	    <version>1.3.0</version>
+	</dependency> 
+    
   </dependencies>
 
   <build>
