--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,13 @@
 	<groupId>org.reddwarfserver.ext.berkeleydb</groupId>
 	<artifactId>db</artifactId>
 	  </dependency>
+	  
+	  <dependency>
+    	<groupId>org.java-websocket</groupId>
+    	<artifactId>Java-WebSocket</artifactId>
+    	<version>1.3.0</version>
+	  </dependency> 
+	  
       </dependencies>
       <activation><activeByDefault>true</activeByDefault></activation>
     </profile>
