--- a/sgs-server-api/.classpath
+++ b/sgs-server-api/.classpath
@@ -4,7 +4,7 @@
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="src" path="target/maven-shared-archive-resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
   <classpathentry kind="var" path="M2_REPO/com/sleepycat/je/4.1.10/je-4.1.10.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/reddwarfserver/ext/berkeleydb/db/4.5.20/db-4.5.20.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/java-websocket/Java-WebSocket/1.3.0/Java-WebSocket-1.3.0.jar"/>
